--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@
   background-color: #000000;
   /* background-color: #0f0f0f; */
   background-attachment: fixed;
+  color: #ffffff;
   /* background-position: center;
   background-size: 100% 100%; */
   overflow-x: hidden;
