--- a/src/App.css
+++ b/src/App.css
@@ -327,6 +327,14 @@ body {
   }
 }
 
+.client-story-video-player video {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  object-fit: cover;
+  z-index: 2;
+}
+
 .autoplay-video-loader {
   width: 18rem;
   height: 100%;
