--- a/src/App.css
+++ b/src/App.css
@@ -327,7 +327,7 @@ body {
   }
 }
 
-.client-story-video-player video {
+.video-component video {
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
