--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,9 @@
   .sm-blurred-red-circle {
     @apply blur-[25px] bg-gradient-to-r from-[#450a0a] to-[#F0801C_90%] absolute h-[5rem] w-[5rem] rounded-full;
   }
+  .text-shadow-sm {
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
+  }
 }
 
 .hyphen-auto {
